Fix location of build output and test index.html.md change

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -38,4 +38,4 @@ jobs:
       uses: actions/upload-artifact@v1
       with:
         name: docs-static-bundle
-        path: slate/build
+        path: build
