--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -46,5 +46,5 @@ jobs:
     - name: Deploy docs
       uses: peaceiris/actions-gh-pages@v3
       with:
-        github_token: ${{ secrets.GH_TOKEN }}
+        personal_token: ${{ secrets.GH_TOKEN }}
         publish_dir: ./build
